--- a/src/app/components/header-page/header-page.component.html
+++ b/src/app/components/header-page/header-page.component.html
@@ -9,9 +9,9 @@
     <mat-sidenav #sidenav="matSidenav">
   
       <div class="links">
-        <a (click)="test(); sidenav.close()" mat-button>Go to product</a>
-        <a (click)="test(); sidenav.close()" mat-button>Go to client</a>
-        <a (click)="test(); sidenav.close()" mat-button>Go to User</a>
+        <a (click)="goToIncarichi(); sidenav.close()" mat-button>Go to Incarichi</a>
+        <a (click)="goToAllegati(); sidenav.close()" mat-button>Go to Allegati</a>
+        <a (click)="goToDati(); sidenav.close()" mat-button>Go to Data</a>
         <a (click)="test(); sidenav.close()" mat-button>Logout</a>
       </div>
     </mat-sidenav>
