--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -1,1 +1,80 @@
-<p>incarichi-list works!</p>
+<div class="container">
+    <div class="box">
+      <section style="width: 100%;">
+        <button (click)="getAllList()" mat-raised-button color="accent" class="backbroundButton">Aggiorna</button>
+      </section>
+      <mat-progress-bar *ngIf="isLoading" mode="indeterminate" style="height: 5px;"></mat-progress-bar>
+      <div class="mat-elevation-z8">
+
+        <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
+
+          <!-- Colonne per ogni campo di IIncarichi -->
+          <ng-container matColumnDef="codiceMago">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> codiceMago </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.codiceMago }} </td>
+          </ng-container>
+          <ng-container matColumnDef="ragSociale">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ragSociale </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.ragSociale }} </td>
+          </ng-container>
+          <ng-container matColumnDef="prov">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> prov </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.prov }} </td>
+          </ng-container>
+          <ng-container matColumnDef="cap">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> cap </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.cap }} </td>
+          </ng-container>
+          <ng-container matColumnDef="comune">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> comune </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.comune }} </td>
+          </ng-container>
+          <ng-container matColumnDef="indirizzo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> indirizzo </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.indirizzo }} </td>
+          </ng-container>
+          <ng-container matColumnDef="key_ord">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> key_ord </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.key_ord }} </td>
+          </ng-container>
+          <ng-container matColumnDef="servizio">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> servizio </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.servizio }} </td>
+          </ng-container>
+          <ng-container matColumnDef="eseguito">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> eseguito </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.eseguito }} </td>
+          </ng-container>
+          <ng-container matColumnDef="annullato">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> annullato </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.annullato }} </td>
+          </ng-container>
+          <ng-container matColumnDef="dataFattTecnico">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> dataFattTecnico </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.dataFattTecnico }} </td>
+          </ng-container>
+          <ng-container matColumnDef="haccp">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> haccp </th>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.haccp }} </td>
+          </ng-container>
+      
+          <!-- Righe della tabella principale -->
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+           <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === row">
+          </tr>
+
+        </table>
+
+        <mat-paginator [length]="list.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]">
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+  <div>
+    <div *ngFor="let allegato of listAllegati">
+      {{allegato.contatore}}
+    </div>
+  </div>
+  
