--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -57,14 +57,29 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> haccp </th>
             <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.haccp }} </td>
           </ng-container>
-      
+
           <!-- Righe della tabella principale -->
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
             class="example-element-row"
+            (click)="toggleExpandedElement(row)"
             [class.example-expanded-row]="expandedElement === row">
           </tr>
-
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div *ngFor="let allegato of listAllegati">
+          {{allegato.Keyord}}
+          {{allegato.contatore}}
+          {{allegato.desc}}
+          {{allegato.DataAllegato}}
+          {{allegato.Data_Rientro}}
+          {{allegato.Rientrato}}
+        </div>
+      </div>
+    </td>
+  </ng-container>
         </table>
 
         <mat-paginator [length]="list.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]">
@@ -74,7 +89,11 @@
   </div>
   <div>
     <div *ngFor="let allegato of listAllegati">
+      {{allegato.Keyord}}
       {{allegato.contatore}}
+      {{allegato.desc}}
+      {{allegato.DataAllegato}}
+      {{allegato.Data_Rientro}}
+      {{allegato.Rientrato}}
     </div>
   </div>
-  
