--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -51,7 +51,7 @@
           </ng-container>
           <ng-container matColumnDef="dataFattTecnico">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> dataFattTecnico </th>
-            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.dataFattTecnico }} </td>
+            <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)">  {{ row.dataFattTecnico | date: 'yyyy/MM/dd' }} </td>
           </ng-container>
           <ng-container matColumnDef="haccp">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> haccp </th>
@@ -65,21 +65,25 @@
             (click)="toggleExpandedElement(row)"
             [class.example-expanded-row]="expandedElement === row">
           </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row" [class.hidden-row]="expandedElement != row"></tr>
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div *ngFor="let allegato of listAllegati">
-          {{allegato.Keyord}}
-          {{allegato.contatore}}
-          {{allegato.desc}}
-          {{allegato.DataAllegato}}
-          {{allegato.Data_Rientro}}
-          {{allegato.Rientrato}}
+        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div *ngIf="listAllegati && listAllegati.length; else noData">
+                <div *ngFor="let allegato of listAllegati">
+                    {{allegato.contatore }}
+                    {{allegato.desc}}
+                    {{allegato.dataAllegato | date: 'yyyy/MM/dd'}}
+                    {{allegato.data_Rientro | date: 'yyyy/MM/dd'}}
+                    {{allegato.rientrato}}
+                </div>
+            </div>
+            <ng-template #noData>
+                <div>NESSUN DATO PRESENTE</div>
+            </ng-template>
         </div>
-      </div>
     </td>
-  </ng-container>
+</ng-container>
         </table>
 
         <mat-paginator [length]="list.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]">
@@ -88,12 +92,4 @@
     </div>
   </div>
   <div>
-    <div *ngFor="let allegato of listAllegati">
-      {{allegato.Keyord}}
-      {{allegato.contatore}}
-      {{allegato.desc}}
-      {{allegato.DataAllegato}}
-      {{allegato.Data_Rientro}}
-      {{allegato.Rientrato}}
-    </div>
   </div>
