--- a/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
+++ b/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
@@ -1,1 +1,14 @@
-<p>incarichi-allegati works!</p>
+<div class="example-element-detail" [@detailExpand]="expandedElement ? 'expanded' : 'collapsed'">
+  <div *ngIf="allegati && allegati.length; else noData">
+      <div *ngFor="let allegato of allegati">
+          {{allegato.contatore }}
+          {{allegato.desc}}
+          {{allegato.dataAllegato | date: 'yyyy/MM/dd'}}
+          {{allegato.data_Rientro | date: 'yyyy/MM/dd'}}
+          {{allegato.rientrato}}
+      </div>
+  </div>
+  <ng-template #noData>
+      <div>NESSUN DATO PRESENTE</div>
+  </ng-template>
+</div>
