--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -65,25 +65,12 @@
             (click)="toggleExpandedElement(row)"
             [class.example-expanded-row]="expandedElement === row">
           </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row" [class.hidden-row]="expandedElement != row"></tr>
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-            <div *ngIf="listAllegati && listAllegati.length; else noData">
-                <div *ngFor="let allegato of listAllegati">
-                    {{allegato.contatore }}
-                    {{allegato.desc}}
-                    {{allegato.dataAllegato | date: 'yyyy/MM/dd'}}
-                    {{allegato.data_Rientro | date: 'yyyy/MM/dd'}}
-                    {{allegato.rientrato}}
-                </div>
-            </div>
-            <ng-template #noData>
-                <div>NESSUN DATO PRESENTE</div>
-            </ng-template>
-        </div>
-    </td>
-</ng-container>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row" [class.hidden-row]="expandedElement != row"></tr>
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+              <app-incarichi-allegati [allegati]="listAllegati" [expandedElement]="expandedElement == element"></app-incarichi-allegati>
+            </td>
+          </ng-container>
         </table>
 
         <mat-paginator [length]="list.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]">
