--- a/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
+++ b/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
@@ -1,14 +1,41 @@
 <div class="example-element-detail" [@detailExpand]="expandedElement ? 'expanded' : 'collapsed'">
-  <div *ngIf="allegati && allegati.length; else noData">
-      <div *ngFor="let allegato of allegati">
-          {{allegato.contatore }}
-          {{allegato.desc}}
-          {{allegato.dataAllegato | date: 'yyyy/MM/dd'}}
-          {{allegato.data_Rientro | date: 'yyyy/MM/dd'}}
-          {{allegato.rientrato}}
-      </div>
-  </div>
-  <ng-template #noData>
+    <ng-container *ngIf="allegati && allegati.length; else noData">
+      <table mat-table [dataSource]="allegati" class="mat-elevation-z8">
+  
+        <!-- Column definitions -->
+        <ng-container matColumnDef="contatore">
+          <th mat-header-cell *matHeaderCellDef> Contatore </th>
+          <td mat-cell *matCellDef="let allegato"> {{allegato.contatore}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="desc">
+          <th mat-header-cell *matHeaderCellDef> Descrizione </th>
+          <td mat-cell *matCellDef="let allegato"> {{allegato.desc}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="dataAllegato">
+          <th mat-header-cell *matHeaderCellDef> Data Allegato </th>
+          <td mat-cell *matCellDef="let allegato"> {{allegato.dataAllegato | date: 'yyyy/MM/dd'}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="dataRientro">
+          <th mat-header-cell *matHeaderCellDef> Data Rientro </th>
+          <td mat-cell *matCellDef="let allegato"> {{allegato.data_Rientro | date: 'yyyy/MM/dd'}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="rientrato">
+          <th mat-header-cell *matHeaderCellDef> Rientrato </th>
+          <td mat-cell *matCellDef="let allegato"> {{allegato.rientrato}} </td>
+        </ng-container>
+  
+        <!-- Table rows -->
+        <tr mat-header-row *matHeaderRowDef="['contatore', 'desc', 'dataAllegato', 'dataRientro', 'rientrato']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['contatore', 'desc', 'dataAllegato', 'dataRientro', 'rientrato'];"></tr>
+      </table>
+    </ng-container>
+  
+    <ng-template #noData>
       <div>NESSUN DATO PRESENTE</div>
-  </ng-template>
-</div>
+    </ng-template>
+  </div>
+  
