--- a/src/app/components/header-page/header-page.component.scss
+++ b/src/app/components/header-page/header-page.component.scss
@@ -2,7 +2,18 @@ mat-toolbar{
     background:#1c1938;
     color: white;
   }
-  
+.menuGradient{
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+}
+
+.menuShadow{
+    border-radius: 4px;
+    //background: #0e0038;
+    box-shadow:  8px -8px 25px #0c012f,
+                 -8px 8px 25px #110044;
+}
+
   mat-sidenav{
     margin: 16px;
     width: 200px;
@@ -13,7 +24,7 @@ mat-toolbar{
     padding: 16px;
     text-align: center;
   }
-  
+
   .content{
     //height: calc(90vh - 10px);
     margin: 16px;
@@ -21,17 +32,17 @@ mat-toolbar{
     display: flex;
     //justify-content: center;
     align-items: center;
-  
+
     font-size: 2rem;
     color: rgb(1, 1, 1);
-  
+
     border-radius: 10px;
   }
-  
+
   mat-sidenav-container{
     height: calc(100vh - 65px);
   }
-  
+
   .menu-button{
     width: 100%;
     display: flex;
@@ -40,40 +51,40 @@ mat-toolbar{
     font-size: 1rem;
     //color: white;
   }
-  
+
     mat-icon{
       margin-right: 8px;
       color: rgb(191, 218, 218);
     }
-  
+
     span{
       color: rgb(191, 218, 218);
-  
+
     }
-  
-  
-  
-  
-  
+
+
+
+
+
     .name{
       margin: 0;
       margin-top: 8px;
       font-weight: normal;
     }
-  
+
     .designation{
       margin-top: 2px;
       font-size: 0.7rem;
       color: lightgray;
     }
-  
+
     mat-divider{
       margin-top: 16px;
       margin-bottom: 16px;
       //background: white;
      // width:100%;
     }
-  
+
     .divider{
       background-color: rgb(111, 110, 110);
     }
@@ -82,7 +93,6 @@ mat-toolbar{
       flex-grow: 1;
       margin: 10px;
       width: 100%;
-     // background-color: red; 
+     // background-color: red;
   }
-  
-  
+
