--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="box">
     <section style="width: 100%;">
-      <button (click)="getAllList()" mat-raised-button color="primary" class="backgroundButton">Aggiorna</button>
+      <button (click)="getAllList()" mat-raised-button color="primary" class="backgroundButton space">Aggiorna</button>
     </section>
     <mat-progress-bar *ngIf="isLoading" mode="indeterminate" style="height: 5px;"></mat-progress-bar>
     <div class="mat-elevation-z8">
