Modifiche css header

--- a/src/app/components/header-page/header-page.component.html
+++ b/src/app/components/header-page/header-page.component.html
@@ -13,8 +13,8 @@
     <mat-sidenav #sidenav="matSidenav">
 
       <div class="links">
-        <a (click)="goToIncarichi(); sidenav.close()" mat-button>Incarichi</a>
-        <a (click)="test(); sidenav.close()" mat-button>Logout</a>
+        <a (click)="goToIncarichi(); sidenav.close()" mat-button class="custom-color"><mat-icon>assignment</mat-icon>Incarichi</a>
+        <a (click)="test(); sidenav.close()" mat-button class="custom-color"><mat-icon>exit_to_app</mat-icon>Logout</a>
       </div>
     </mat-sidenav>
 
