--- a/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.scss
+++ b/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.scss
@@ -4,3 +4,10 @@
 .my-header{
     background-color: #f5f5f5;
 }
+
+.flex-container {
+    display: flex;
+    align-items: center;
+  padding-top: 16px;
+  }
+  
