--- a/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
+++ b/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
@@ -14,28 +14,40 @@
         </ng-container>
 
         <ng-container matColumnDef="dataAllegato">
-          <th mat-header-cell *matHeaderCellDef> Data Allegato </th>
-          <td mat-cell *matCellDef="let allegato"> {{allegato.dataAllegato | date: 'yyyy/MM/dd'}} </td>
-        </ng-container>
+            <th mat-header-cell *matHeaderCellDef> Data Allegato </th>
+            <td mat-cell *matCellDef="let allegato">
+              <div class="flex-container"> 
+                {{allegato.dataAllegato | date: 'dd/MM/yyyy'}}
+                <mat-icon (click)="eseguiAzione()" class="icon-right">image</mat-icon>
+              </div>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="dataRientro">
-          <th mat-header-cell *matHeaderCellDef> Data Rientro </th>
-          <td mat-cell *matCellDef="let allegato"> {{allegato.data_Rientro | date: 'yyyy/MM/dd'}} </td>
-        </ng-container>
+         
+          
+          <ng-container matColumnDef="dataRientro">
+            <th mat-header-cell *matHeaderCellDef> Data Rientro </th>
+            <td mat-cell *matCellDef="let allegato">
+              <div class="flex-container"> 
+                {{allegato.data_Rientro | date: 'dd/MM/yyyy'}}
+                <mat-icon (click)="eseguiAzione()" class="icon-right">image</mat-icon>
+              </div>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="rientrato">
+        <!-- <ng-container matColumnDef="rientrato">
             <th mat-header-cell *matHeaderCellDef> Rientrato </th>
             <td mat-cell *matCellDef="let allegato" class="flex-container"> 
                 {{allegato.rientrato}} 
                 <mat-icon (click)="eseguiAzione()" class="icon-right">image</mat-icon>
             </td>
-        </ng-container>
+        </ng-container> -->
         
         
 
         <!-- Table rows -->
-        <tr mat-header-row *matHeaderRowDef="['contatore', 'desc', 'dataAllegato', 'dataRientro', 'rientrato']" class="my-header"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['contatore', 'desc', 'dataAllegato', 'dataRientro', 'rientrato'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['contatore', 'desc', 'dataAllegato', 'dataRientro']" class="my-header"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['contatore', 'desc', 'dataAllegato', 'dataRientro'];"></tr>
       </table>
     </ng-container>
 
