--- a/src/app/components/header-page/header-page.component.html
+++ b/src/app/components/header-page/header-page.component.html
@@ -6,10 +6,12 @@
     <span style="margin-left: 40px;">
       Incarichi CU
   </span>
-  <span class="example-spacer"></span>
+  <span></span>
+
+  <img src="../../../assets/images/sopraninoLogo.png" class="logo" alt="Logo">
   </mat-toolbar>
 
-  <mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container">
     <mat-sidenav #sidenav="matSidenav">
 
       <div class="links">
@@ -19,7 +21,7 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-
       <router-outlet></router-outlet>
     </mat-sidenav-content>
-</mat-sidenav-container>
+
+  </mat-sidenav-container>
