--- a/src/app/components/header-page/header-page.component.scss
+++ b/src/app/components/header-page/header-page.component.scss
@@ -2,6 +2,7 @@ mat-toolbar{
     background:#1c1938;
     color: white;
   }
+
 .menuGradient{
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
@@ -9,7 +10,6 @@ mat-toolbar{
 
 .menuShadow{
     border-radius: 4px;
-    //background: #0e0038;
     box-shadow:  8px -8px 25px #0c012f,
                  -8px 8px 25px #110044;
 }
@@ -49,9 +49,7 @@ mat-toolbar{
     align-items: center;
     justify-content: flex-start;
     font-size: 1rem;
-    //color: white;
   }
-
     mat-icon{
       margin-right: 8px;
       color: rgb(191, 218, 218);
@@ -61,10 +59,6 @@ mat-toolbar{
       color: rgb(191, 218, 218);
 
     }
-
-
-
-
 
     .name{
       margin: 0;
@@ -81,20 +75,23 @@ mat-toolbar{
     mat-divider{
       margin-top: 16px;
       margin-bottom: 16px;
-      //background: white;
-     // width:100%;
     }
 
     .divider{
       background-color: rgb(111, 110, 110);
     }
+
     .box{
       flex-basis: 15rem;
       flex-grow: 1;
       margin: 10px;
       width: 100%;
-     // background-color: red;
   }
   .custom-color {
-    color: white !important; /* Scegli il colore che preferisci */
+    color: white !important;
+  }
+  .logo {
+    height: 75px;
+    width: auto;
+    margin-left: auto;
   }
