--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -60,9 +60,9 @@
 
         <!-- Righe della tabella principale -->
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="example-element-row"
-          (click)="toggleExpandedElement(row)" [class.example-expanded-row]="expandedElement === row"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"
+          (click)="toggleExpandedElement(row)" [class.expanded-row]="expandedElement === row"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"
           [class.hidden-row]="expandedElement != row"></tr>
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
