--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.scss
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.scss
@@ -3,27 +3,27 @@
     flex-wrap: wrap;
     flex-grow: 1;
   }
-  
+
   .box {
     flex-basis: 15rem;
     flex-grow: 1;
     margin: 10px;
     width: 100%;
   }
-  
+
   mat-form-field {
     width: 100%;
   }
-  
+
   .buttonClass {
     margin-right: 0px;
   }
-  
+
   .buttonContainer {
     width: 100%;
     text-align: right;
   }
-  
+
   .hidden-row {
     height: 0;
     overflow: hidden;
@@ -33,26 +33,26 @@
     width: 100%;
     border-collapse: collapse;
   }
-  
+
   .table th,
   .table td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid #ddd;
   }
-  
-  .example-element-row {
+
+  .element-row {
     cursor: pointer;
   }
-  
-  .example-expanded-row {
+
+  .expanded-row {
     background-color: #f5f5f5;
   }
-  
-  .example-detail-row {
+
+  .detail-row {
     background-color: #f9f9f9;
   }
-  
+
   .hidden-row {
     display: none;
   }
@@ -61,7 +61,7 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  
+
   .table th:hover {
     background-color: #e0e0e0;
   }
