--- a/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
+++ b/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
@@ -17,7 +17,7 @@
             <td mat-cell *matCellDef="let allegato">
               <div class="flex-container">
                 {{allegato.dataAllegato | date: 'dd/MM/yyyy'}}
-                <mat-icon (click)="eseguiAzione()" class="icon-right">image</mat-icon>
+                <mat-icon (click)="eseguiAzione(0)" class="icon-right">image</mat-icon>
               </div>
             </td>
           </ng-container>
@@ -27,7 +27,7 @@
             <td mat-cell *matCellDef="let allegato">
               <div class="flex-container">
                 {{allegato.data_Rientro | date: 'dd/MM/yyyy'}}
-                <mat-icon (click)="eseguiAzione()" class="icon-right">image</mat-icon>
+                <mat-icon (click)="eseguiAzione(1)" class="icon-right">image</mat-icon>
               </div>
             </td>
           </ng-container>
