--- a/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
+++ b/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
@@ -26,12 +26,16 @@
             <th mat-header-cell *matHeaderCellDef> Data Rientro </th>
             <td mat-cell *matCellDef="let allegato">
               <div class="flex-container">
-                {{allegato.data_Rientro | date: 'dd/MM/yyyy'}}
-                <mat-icon (click)="eseguiAzione(1, allegato.contatore)" class="icon-right">image</mat-icon>
+                <ng-container *ngIf="allegato.data_Rientro; else noDataRientro">
+                  {{allegato.data_Rientro | date: 'dd/MM/yyyy'}}
+                  <mat-icon (click)="eseguiAzione(1, allegato.contatore)" class="icon-right">image</mat-icon>
+                </ng-container>
+                <ng-template #noDataRientro>
+                  <div>DATO NON PRESENTE</div>
+                </ng-template>
               </div>
             </td>
           </ng-container>
-
 
         <tr mat-header-row *matHeaderRowDef="['contatore', 'desc', 'dataAllegato', 'dataRientro']" class="my-header"></tr>
         <tr mat-row *matRowDef="let row; columns: ['contatore', 'desc', 'dataAllegato', 'dataRientro'];"></tr>
