pulizia codice e ottimizzazione memoria

--- a/src/app/components/header-page/header-page.component.html
+++ b/src/app/components/header-page/header-page.component.html
@@ -4,7 +4,7 @@
     </button>
 
     <span style="margin-left: 40px;">
-      Incarichi CU
+      <!-- Inserisci titolo per navbar qui -->
   </span>
   <span></span>
 
