--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -51,7 +51,7 @@
         </ng-container>
         <ng-container matColumnDef="dataFattTecnico">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Fatturazione Tecnico </th>
-          <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)"> {{ row.dataFattTecnico | date: 'dd/MM/yyyy'}} </td>
+          <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)"> {{ row.dataFattTecnicoFormatted }} </td>
         </ng-container>
         <ng-container matColumnDef="haccp">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> HACCP </th>
