--- a/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
+++ b/src/app/pages/incarichi/incarichi-allegati/incarichi-allegati.component.html
@@ -17,8 +17,9 @@
             <td mat-cell *matCellDef="let allegato">
               <div class="flex-container">
                 {{allegato.dataAllegato | date: 'dd/MM/yyyy'}}
-                <mat-icon (click)="eseguiAzione(0, allegato.contatore)" class="icon-right">image</mat-icon>
-              </div>
+                <mat-icon *ngIf="!isDownloading" (click)="eseguiAzione(0, allegato.contatore)" class="icon-right">attach_file</mat-icon>
+                <mat-icon *ngIf="isDownloading" class="icon-right spinner">hourglass_empty</mat-icon>
+              </div>              
             </td>
           </ng-container>
 
