--- a/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
+++ b/src/app/pages/incarichi/incarichi-list/incarichi-list.component.html
@@ -57,7 +57,10 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header> HACCP </th>
           <td mat-cell *matCellDef="let row" (click)="onRowClicked(row)"> {{ row.haccp }} </td>
         </ng-container>
-
+        <ng-container matColumnDef="allegato">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Allegato </th>
+          <td mat-cell *matCellDef="let row"> {{ hasAttachments(row) ? 'Si' : 'No' }} </td>
+        </ng-container>
         <!-- Righe della tabella principale -->
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"
